# conesearch-alchemy

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  python-publish.yml
conesearch_alchemy/: __init__.py  math.py  point.py  util.py
conesearch_alchemy/tests/: conftest.py  test_math.py  test_point.py  test_util.py
tests/: test_math.py  test_point.py  test_util.py
