[tool.poetry]
name = "conesearch-alchemy"
version = "1.0.0"
description = "SQLAlchemy extension for indexed cone searches in astronomical catalogs"
readme = "README.md"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "BSD-3-clause"
repository = "https://github.com/skyportal/conesearch-alchemy"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "*"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
astropy = "*"
numpy = "*"
psycopg = { version = "*", extras = ["binary"] }
pytest = "*"
pytest-benchmark = "*"
pytest-postgresql = ">=4.0.0"
scipy = "*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
